--- a/merchex/listings/templates/listings/about.html
+++ b/merchex/listings/templates/listings/about.html
@@ -1,8 +1,5 @@
-<html>
-    <head>
-        <title>Merchex - A propos de nous</title>
-    </head>
-    <body>
-        <h1>Page About</h1>
-    </body>
-</html>
+{% extends 'listings/base.html' %} {% block content %}
+
+<h1>Page About</h1>
+
+{% endblock %}
