--- a/merchex/listings/templates/listings/base.html
+++ b/merchex/listings/templates/listings/base.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="{% static 'listings/style.css' %}" />
     </head>
     <body>
+        <nav>
+            <a href="{% url 'band-list' %}">Groupes</a>
+        </nav>
         {% block content %}{% endblock %}
     </body>
 </html>
