--- a/merchex/listings/templates/listings/contact.html
+++ b/merchex/listings/templates/listings/contact.html
@@ -1,5 +1,12 @@
 {% extends 'listings/base.html' %} {% block content %}
 
-<h1>Page de contact</h1>
+<h1>Contactez-nous</h1>
+
+<p>Nous sommes là pour vous aider</p>
+
+<form action="" method="post" novalidate>
+    {% csrf_token %} {{form.as_p}}
+    <input type="submit" value="Envoyer" />
+</form>
 
 {% endblock %}
