add update and delete pages form items and bands

--- a/merchex/listings/templates/listings/item_detail.html
+++ b/merchex/listings/templates/listings/item_detail.html
@@ -1,6 +1,9 @@
 {% extends 'listings/base.html' %} {% block content %}
 <h2>{{ item.title }}</h2>
 
+<a href="{% url 'item-update' item.id %}">Modifier l'annonce</a>
+<a href="{% url 'item-delete' item.id %}">Supprimer l'annonce</a>
+
 <ul>
     <li>Description : {{ item.description }}</li>
     <li>Année : {{ item.year }}</li>
