--- a/merchex/listings/templates/listings/band_detail.html
+++ b/merchex/listings/templates/listings/band_detail.html
@@ -1,6 +1,9 @@
 {% extends 'listings/base.html' %} {% block content %}
 <h2>{{ band.name }}</h2>
 
+<a href="{% url 'band-update' band.id %}">Modifier le groupe</a>
+<a href="{% url 'band-delete' band.id %}">Supprimer le groupe</a>
+
 <ul>
     <li>Genre : {{ band.get_genre_display }}</li>
     <li>Année de formation : {{ band.year_formed }}</li>
